samples/_failures_safe/1761344360_ffa414_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57497863.c: In function ‘main’:
./samples/SAFE/__tmp_57497863.c:158:12: error: missing terminating " character
  158 |     printf("Decompression successful: verified
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_57497863.c:158:5: error: expected expression at end of input
  158 |     printf("Decompression successful: verified
      |     ^~~~~~
./samples/SAFE/__tmp_57497863.c:158:5: error: expected declaration or statement at end of input
